fix about page overflow

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -27,6 +27,10 @@ body {
     align-items: center;
 }
 
+section {
+    overflow-x: hidden;
+}
+
 /* ----------------------- navbar -------------------- */
 
 nav {
